syntax = "proto3";

option go_package = "github.com/zenvisjr/building-scalable-microservices/catalog/pb;pb";


service CatalogService {
    rpc PostProduct (PostProductRequest) returns (PostProductResponse);
    rpc GetProduct (GetProductRequest) returns (GetProductResponse);
    rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
    rpc UpdateStockAndSold(UpdateStockRequest) returns (UpdateStockResponse);


}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    uint32 stock = 5;
    uint32 sold = 6;
}

message PostProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
    uint32 stock = 4;
}

message PostProductResponse {
    Product product = 1;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message GetProductsRequest {
    uint64 skip = 1;
    uint64 take = 2;
    repeated string ids = 3;
    string query = 4;
}

message GetProductsResponse {
    repeated Product products = 1;
}

message UpdateStockRequest {
    string product_id = 1;
    int32 quantity = 2;
}

message UpdateStockResponse {
    bool ok = 1;
}
